--- a/geolocation/pom.xml
+++ b/geolocation/pom.xml
@@ -49,6 +49,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>geolocation</finalName>
     </build>
 
 </project>
