--- a/database/src/main/resources/application.properties
+++ b/database/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=8081
-domain.datasource.type=MYSQL
-domain.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/logtime
-spring.datasource.username=root
-spring.datasource.password=Kaustubh1
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/hrm
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.show-sql=true
