--- a/performance-management/src/main/resources/application.properties
+++ b/performance-management/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=performance-management
 server.port=8081
 
-domain.datasource.type=MYSQL
-spring.jpa.hibernate.ddl-auto=update
-domain.datasource.driver-class=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/hrm_performance_management
-spring.datasource.username=root
-spring.datasource.password=Kaustubh1
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.show-sql=true
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
+spring.data.mongodb.database=demo1
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
