backend completion for auth & goals and performance mgmt

--- a/performance-management/pom.xml
+++ b/performance-management/pom.xml
@@ -58,6 +58,11 @@
             <version>0.12.5</version>
         </dependency>
         <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.12.5</version>
