--- a/hrm-ui/package.json
+++ b/hrm-ui/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.0",
+    "reactstrap": "^9.2.2",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
