company register, company admin creation, entity classes, refactoring, roles api in employee controller

--- a/performance-management/pom.xml
+++ b/performance-management/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/>
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>performance-management</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>performance-management</name>
-    <description>Demo project for Spring Boot</description>
+    <artifactId>hrm-backend</artifactId>
+    <version>1</version>
+    <name>hrm-backend</name>
+    <description>HRM tool for the efficient, hyper-management of employees.</description>
     <url/>
     <licenses>
         <license/>
@@ -33,6 +33,26 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
