--- a/performance-management/src/main/resources/application.properties
+++ b/performance-management/src/main/resources/application.properties
@@ -6,7 +6,17 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.database=demo1
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=172.17.0.1
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kaustubhd9@gmail.com
+spring.mail.password=ctgq blwm mnra niyp
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
