maven plugin addition for validate phase-checkstyle

--- a/performance-management/src/main/resources/application.properties
+++ b/performance-management/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.data.mongodb.database=demo1
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=172.17.0.1
 
+mongodb://admin:password@localhost:27017/?authMechanism=DEFAULT
+
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
 
