--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - 8081:8081
     links:
       - hrm-db-test-prod-1
+    environment:
+      - MONGO_URL=mongodb://admin:password@localhost:27017/demo1?authSource=admin
   hrm-frontend-test-1:
     image: hrm-frontend-test
     container_name: "hrm-frontend-test-container-1"
@@ -28,5 +30,3 @@ services:
     links:
       - hrm-backend-test-1
       - hrm-db-test-prod-1
-
-
