--- a/performance-management/src/main/resources/application.properties
+++ b/performance-management/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=performance-management
 server.port=8081
 
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=password
-spring.data.mongodb.database=demo1
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=172.17.0.1
+spring.data.mongodb.uri=${MONGO_URL}
 
 mongodb://admin:password@localhost:27017/?authMechanism=DEFAULT
 
